logs/django-hyperadmin.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_hyperadmin-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/hyperadmin'...
Listing './lib/python3.5/site-packages/hyperadmin/clients'...
Listing './lib/python3.5/site-packages/hyperadmin/clients/views'...
Listing './lib/python3.5/site-packages/hyperadmin/contrib'...
Listing './lib/python3.5/site-packages/hyperadmin/contrib/apikey'...
Listing './lib/python3.5/site-packages/hyperadmin/contrib/apikey/tests'...
Compiling './lib/python3.5/site-packages/hyperadmin/endpoints.py'...
***   File "./lib/python3.5/site-packages/hyperadmin/endpoints.py", line 381
    raise LinkNotAvailable, 'Link unavailable: %s' % link_name
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hyperadmin/mediatypes'...
Listing './lib/python3.5/site-packages/hyperadmin/resources'...
Listing './lib/python3.5/site-packages/hyperadmin/resources/auth'...
Listing './lib/python3.5/site-packages/hyperadmin/resources/crud'...
Listing './lib/python3.5/site-packages/hyperadmin/resources/directory'...
Listing './lib/python3.5/site-packages/hyperadmin/resources/models'...
Listing './lib/python3.5/site-packages/hyperadmin/resources/storages'...
Listing './lib/python3.5/site-packages/hyperadmin/resources/wizard'...
Listing './lib/python3.5/site-packages/hyperadmin/templates'...
Listing './lib/python3.5/site-packages/hyperadmin/templates/hyperadmin'...
Listing './lib/python3.5/site-packages/hyperadmin/templates/hyperadmin/html5'...
Listing './lib/python3.5/site-packages/hyperadmin/templates/hyperadmin/iframe'...
Listing './lib/python3.5/site-packages/hyperadmin/templatetags'...
Listing './lib/python3.5/site-packages/hyperadmin/tests'...
Listing './lib/python3.5/site-packages/hyperadmin/tests/mediatypes'...
Compiling './lib/python3.5/site-packages/hyperadmin/tests/test_resources.py'...
***   File "./lib/python3.5/site-packages/hyperadmin/tests/test_resources.py", line 128
    print response
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hyperadmin/tests/wizard_fixtures.py'...
***   File "./lib/python3.5/site-packages/hyperadmin/tests/wizard_fixtures.py", line 69
    print 'set data:', value
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mimeparse-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
